--- a/libs/index.css
+++ b/libs/index.css
@@ -7,16 +7,7 @@
 	margin-bottom: 30px;
 }
 
-.dest1 {
-	text-align: center;
-
-}
-
-.dest2 {
-	text-align: center;
-}
-
-.dest3 {
+.dest {
 	text-align: center;
 }
 
